# MathEngine

./: CMakeLists.txt  README.md  main.cpp
Data/: Cell.cpp  Cell.h  Definitions.h  Document.cpp  Document.h  Edge.cpp  Edge.h  EdgeContainer.cpp  EdgeContainer.h  IFormula.cpp  IFormula.h
Formulas/: ConstValue.cpp  ConstValue.h  IFormula.cpp  IFormula.h  Summary.cpp  Summary.h
IO/: Parser.cpp  Parser.h  Writter.cpp  Writter.h
MathEngine/: CalculationContext.cpp  CalculationContext.h  EvaluationAlgorithm.cpp  EvaluationAlgorithm.h  MathEngine.cpp  MathEngine.h
Scheduling/: ThreadPool.cpp  ThreadPool.h
